--- a/module/Admin/view/admin/resource/index.phtml
+++ b/module/Admin/view/admin/resource/index.phtml
@@ -9,11 +9,11 @@
                 <thead>
 
                 <th><input type="checkbox" id="checkall" /></th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Status</th>
-                <th>Roles</th>
-                <th>Date Created</th>
+                <th>ID</th>
+                <th>Module</th>
+                <th>Controller</th>
+                <th>Action</th>
+                <th>Description</th>
                 <th>View</th>
 
                 <th>Edit</th>
@@ -22,28 +22,16 @@
                 </thead>
                 <tbody>
 
-                <?php foreach ($users as $key => $user):
-
-                    $rolesString = '';
-                    foreach ($user->getRoles() as $key => $role){
-                        if(!empty($rolesString)){
-                            $rolesString .=  ", " . $role->getName();
-                        }else{
-                            $rolesString .=  $role->getName();
-                        }
-
-                    }
-
-                ?>
+                <?php foreach ($resources as $resource): ?>
 
                 <tr>
                     <td><input type="checkbox" class="checkthis" /></td>
-                    <td><?= $user->getFullName() ?></td>
-                    <td><?= $user->getEmail() ?></td>
-                    <td><?= $user->getStatus() == 1 ?  "ATIVO" : "INATIVO" ?></td>
-                    <td><?= $rolesString ?></td>
-                    <td><?= $user->getDateCreated() ?></td>
-                    <td><p data-placement="top" data-toggle="tooltip" title="View"><a href="<?= $this->url('admin/user', ['action' => 'view' ,'id' => $user->getId()]) ?>" id="view" name="view" class="btn btn-primary btn-xs" data-title="View"><span class="glyphicon glyphicon-home"></span></a></p></td>
+                    <td><?= $resource->getId() ?></td>
+                    <td><?= $resource->getModule() ?></td>
+                    <td><?= $resource->getController() ?></td>
+                    <td><?= $resource->getAction() ?></td>
+                    <td><?= $resource->getDescription() ?></td>
+                    <td><p data-placement="top" data-toggle="tooltip" title="View"><a href="<?= $this->url('admin/resource', ['action' => 'view' ,'id' => $resource->getId()]) ?>" id="view" name="view" class="btn btn-primary btn-xs" data-title="View"><span class="glyphicon glyphicon-home"></span></a></p></td>
                     <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p></td>
                     <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
                 </tr>
@@ -57,11 +45,11 @@
                             </div>
                             <div class="modal-body">
                                 <div class="form-group">
-                                    <input class="form-control " type="text" placeholder="Mohsin" value="<?= $user->getFullName() ?>">
+                                    <input class="form-control " type="text" placeholder="Mohsin" value="<?= $resource->getId() ?>">
                                 </div>
                                 <div class="form-group">
 
-                                    <input class="form-control " type="text" placeholder="Irshad" value="<?= $user->getEmail() ?>">
+                                    <input class="form-control " type="text" placeholder="Irshad" value="<?= $resource->getController() ?>">
                                 </div>
                                 <div class="form-group">
                                     <textarea rows="2" class="form-control" placeholder="CB 106/107 Street # 11 Wah Cantt Islamabad Pakistan"></textarea>
