--- a/module/Admin/view/admin/role/index.phtml
+++ b/module/Admin/view/admin/role/index.phtml
@@ -9,11 +9,8 @@
                 <thead>
 
                 <th><input type="checkbox" id="checkall" /></th>
+                <th>ID</th>
                 <th>Name</th>
-                <th>Email</th>
-                <th>Status</th>
-                <th>Roles</th>
-                <th>Date Created</th>
                 <th>View</th>
 
                 <th>Edit</th>
@@ -22,28 +19,13 @@
                 </thead>
                 <tbody>
 
-                <?php foreach ($users as $key => $user):
-
-                    $rolesString = '';
-                    foreach ($user->getRoles() as $key => $role){
-                        if(!empty($rolesString)){
-                            $rolesString .=  ", " . $role->getName();
-                        }else{
-                            $rolesString .=  $role->getName();
-                        }
-
-                    }
-
-                ?>
+                <?php foreach ($roles as $role): ?>
 
                 <tr>
                     <td><input type="checkbox" class="checkthis" /></td>
-                    <td><?= $user->getFullName() ?></td>
-                    <td><?= $user->getEmail() ?></td>
-                    <td><?= $user->getStatus() == 1 ?  "ATIVO" : "INATIVO" ?></td>
-                    <td><?= $rolesString ?></td>
-                    <td><?= $user->getDateCreated() ?></td>
-                    <td><p data-placement="top" data-toggle="tooltip" title="View"><a href="<?= $this->url('admin/user', ['action' => 'view' ,'id' => $user->getId()]) ?>" id="view" name="view" class="btn btn-primary btn-xs" data-title="View"><span class="glyphicon glyphicon-home"></span></a></p></td>
+                    <td><?= $role->getId() ?></td>
+                    <td><?= $role->getName() ?></td>
+                    <td><p data-placement="top" data-toggle="tooltip" title="View"><a href="<?= $this->url('admin/role', ['action' => 'view' ,'id' => $role->getId()]) ?>" id="view" name="view" class="btn btn-primary btn-xs" data-title="View"><span class="glyphicon glyphicon-home"></span></a></p></td>
                     <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p></td>
                     <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
                 </tr>
@@ -57,11 +39,11 @@
                             </div>
                             <div class="modal-body">
                                 <div class="form-group">
-                                    <input class="form-control " type="text" placeholder="Mohsin" value="<?= $user->getFullName() ?>">
+                                    <input class="form-control " type="text" placeholder="Mohsin" value="<?= $role->getId() ?>">
                                 </div>
                                 <div class="form-group">
 
-                                    <input class="form-control " type="text" placeholder="Irshad" value="<?= $user->getEmail() ?>">
+                                    <input class="form-control " type="text" placeholder="Irshad" value="<?= $role->getName() ?>">
                                 </div>
                                 <div class="form-group">
                                     <textarea rows="2" class="form-control" placeholder="CB 106/107 Street # 11 Wah Cantt Islamabad Pakistan"></textarea>
